# wtp

./: .gitignore  AGENTS.md  Cargo.toml  FIX_DESIGN.md  GUI_DESIGN.md  GUI_REVIEW.md  INSTALL.md  README.md  README_CN.md  REVIEW.md  install.sh
.github/workflows/: release.yml
docs/: README.md
docs/agent-integration/: claude-code.md
docs/design/: audit-fixes.md  stacked-worktree.md  workspace-restructure.md
docs/reviews/: audit-code-quality.md  audit-fixes.md  audit-report.md  gui-implementation.md
go/: go.mod  main.go
go/cmd/: cd.go  config_cmd.go  create.go  eject.go  fuzzy.go  help.go  host.go  import.go  ls.go  remove.go  root.go  shell_init.go  status.go  switch.go  theme.go
go/internal/core/: config.go  config_test.go  error.go  fence.go  fence_test.go  git.go  git_test.go  workspace.go  workspace_test.go  worktree.go  worktree_test.go
go/internal/testutil/: testutil.go  testutil_test.go
go/tests/: integration_test.go
skills/: README.md
skills/wtp-configure/: SKILL.md
skills/wtp-repo-attach/: SKILL.md
skills/wtp-safe-cleanup/: SKILL.md
skills/wtp-setup/: SKILL.md
skills/wtp-stacked-worktree/: SKILL.md
skills/wtp-workspace-operator/: SKILL.md
src/cli/: cd.rs  completions.rs  config.rs  eject.rs  fuzzy.rs  host.rs  import.rs  ls.rs  mod.rs  remove.rs  status.rs  switch.rs
src/core/: config.rs  error.rs  fence.rs  git.rs  mod.rs  workspace.rs  worktree.rs
tests/: integration_test.rs
wtp-cli/: Cargo.toml  build.rs
wtp-cli/src/: main.rs
wtp-cli/src/cli/: cd.rs  common.rs  completions.rs  config.rs  create.rs  eject.rs  fuzzy.rs  git_status_fmt.rs  host.rs  import.rs  ls.rs  mod.rs  remove.rs  repo_color.rs  restack.rs  retarget.rs  shell_init.rs  status.rs  switch.rs
wtp-cli/tests/: integration_test.rs
wtp-core/: Cargo.toml
wtp-core/src/: config.rs  error.rs  fence.rs  git.rs  lib.rs  workspace.rs  worktree.rs
wtp-derive/: Cargo.toml
wtp-derive/src/: lib.rs
wtp-gui/: Cargo.toml  DESIGN_SYSTEM.md
wtp-gui/src/: app.rs  assets.rs  main.rs  state.rs  tray.rs
wtp-gui/src/components/: design_system.rs  layout.rs  mod.rs  primitives.rs  search_input.rs  status_badge.rs  text_input.rs  theme.rs
wtp-gui/src/views/: config_panel.rs  create_workspace.rs  import_repo.rs  mod.rs  workspace_detail.rs  workspace_list.rs
wtp-gui/tests/: gpui_layout_lint.rs
