[package]
name = "wtp"
version = "0.1.0"
edition = "2024"
authors = ["eddix <eli.tech.arm@gmail.com>"]
description = "WorkTree for Polyrepo - Manage multiple git worktrees across repositories"
license = "MIT"
repository = "https://github.com/eddix/wtp"
keywords = ["git", "worktree", "cli", "polyrepo", "workspace"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.90"

[[bin]]
name = "wtp"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
wtp-derive = { path = "wtp-derive" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime (for future TUI/async operations)
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "io-util"] }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"
skim = { version = "3.6", default-features = false, optional = true }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
anstyle = "1.0"
anstream = "0.6"
uuid = { version = "1.11", features = ["v4", "serde"] }
shellexpand = "3.1"
walkdir = "2.5"
indexmap = { version = "2.6", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"

[features]
default = ["fuzzy"]
fuzzy = ["skim"]
