[package]
name = "wtp-core"
version = "0.1.1"
edition = "2024"
authors = ["eddix <eli.tech.arm@gmail.com>"]
description = "Core library for wtp — WorkTree for Polyrepo"
license = "MIT"
repository = "https://github.com/eddix/wtp"
rust-version = "1.90"

[lib]
name = "wtp_core"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.40", features = ["process"] }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
shellexpand = "3.1"
walkdir = "2.5"
indexmap = { version = "2.6", features = ["serde"] }
tempfile = "3.13"
tracing = "0.1"
